--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Project Showcase</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <!-- Chart.js for dashboard stats -->
+    <!-- Google Fonts for modern typography -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Chart.js for dashboard -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <!-- Hero Section (Theme-Based: Tech Explorer) -->
-    <section id="hero" class="theme-header">
+    <section id="hero" class="glass">
         <div class="hero-content">
             <h1>Your Name</h1>
-            <p class="tagline">Embarking on a Tech Exploration Journey</p>
-            <a href="resume.pdf" class="cta-button" download>Download My Resume</a>
+            <p class="tagline">Embarking on a Tech Odyssey</p>
+            <a href="resume.pdf" class="cta-button" download>Download Resume</a>
         </div>
     </section>
 
@@ -37,13 +39,13 @@
     <!-- Main Content -->
     <main>
         <!-- About Me Section -->
-        <section id="about" class="fade-in">
+        <section id="about" class="glass fade-in">
             <h2>About Me</h2>
-            <p>I’m a passionate coder who loves solving problems and building projects like my bike store site. I thrive in team settings, having collaborated on group projects, and I’m always eager to learn new tools to adapt to challenges.</p>
+            <p>I’m a passionate developer who thrives on solving complex challenges and crafting innovative projects. With a knack for teamwork and a hunger for learning, I’m ready to make an impact.</p>
         </section>
 
-        <!-- Stats Dashboard (Interactive Dashboard) -->
-        <section id="dashboard" class="fade-in">
+        <!-- Stats Dashboard -->
+        <section id="dashboard" class="glass fade-in">
             <h2>Dashboard</h2>
             <div class="dashboard-grid">
                 <div class="widget">
@@ -63,26 +65,26 @@
         </section>
 
         <!-- Timeline Journey -->
-        <section id="timeline" class="fade-in">
-            <h2>My Coding Journey</h2>
+        <section id="timeline" class="glass fade-in">
+            <h2>My Coding Odyssey</h2>
             <div class="timeline">
                 <div class="timeline-node">
                     <h3>May 2024: Bike Parts Store</h3>
-                    <p>Launched a Django e-commerce site.</p>
+                    <p>Launched a cutting-edge Django e-commerce platform.</p>
                 </div>
                 <div class="timeline-node">
                     <h3>June 2024: Game Score Tracker</h3>
-                    <p>Built a Python app for gamers.</p>
+                    <p>Developed a sleek Python app for gamers.</p>
                 </div>
                 <div class="timeline-node">
                     <h3>July 2024: Personal Blog</h3>
-                    <p>Crafted a static blog with HTML/CSS.</p>
+                    <p>Designed a modern static blog with HTML/CSS.</p>
                 </div>
             </div>
         </section>
 
-        <!-- Projects Gallery (Minimalist with Theme Categories) -->
-        <section id="projects" class="fade-in">
+        <!-- Projects Gallery -->
+        <section id="projects" class="glass fade-in">
             <h2>Project Gallery</h2>
             <div class="category-tabs">
                 <button class="tab active" data-category="all">All</button>
@@ -90,13 +92,12 @@
                 <button class="tab" data-category="app">Apps</button>
             </div>
             <div class="project-grid">
-                <!-- Project Card 1 (Web) -->
                 <div class="project-card web">
                     <img src="images/project1.jpg" alt="Bike Parts Store">
                     <div class="overlay">
                         <h3>Bike Parts Store</h3>
-                        <p>I loved building this Django-based e-commerce site!</p>
-                        <p class="challenge"><strong>Challenge:</strong> Reduced load time by 15%.</p>
+                        <p>A passion project making e-commerce seamless!</p>
+                        <p class="challenge"><strong>Challenge:</strong> Optimized load time by 15%.</p>
                         <p class="skills"><strong>Skills:</strong> Django, MySQL, Python.</p>
                         <div class="tags">
                             <span class="tag">Python</span>
@@ -106,12 +107,11 @@
                     </div>
                     <a href="projects/bike-store.html" class="learn-more">Learn More</a>
                 </div>
-                <!-- Project Card 2 (App) -->
                 <div class="project-card app">
                     <img src="images/project2.jpg" alt="Game Score Tracker">
                     <div class="overlay">
                         <h3>Game Score Tracker</h3>
-                        <p>I had a blast creating this app for gamers!</p>
+                        <p>A fun app for competitive gamers!</p>
                         <p class="challenge"><strong>Challenge:</strong> Fixed real-time updates.</p>
                         <p class="skills"><strong>Skills:</strong> Python, Tkinter.</p>
                         <div class="tags">
@@ -122,13 +122,12 @@
                     </div>
                     <a href="projects/game-tracker.html" class="learn-more">Learn More</a>
                 </div>
-                <!-- Project Card 3 (Web) -->
                 <div class="project-card web">
                     <img src="images/project3.jpg" alt="Personal Blog">
                     <div class="overlay">
                         <h3>Personal Blog</h3>
-                        <p>I enjoyed crafting this static blog!</p>
-                        <p class="challenge"><strong>Challenge:</strong> Improved mobile responsiveness.</p>
+                        <p>A modern space to share my coding journey!</p>
+                        <p class="challenge"><strong>Challenge:</strong> Enhanced mobile responsiveness.</p>
                         <p class="skills"><strong>Skills:</strong> HTML, CSS.</p>
                         <div class="tags">
                             <span class="tag">HTML</span>
@@ -142,7 +141,7 @@
         </section>
 
         <!-- Gamified Section -->
-        <section id="game" class="fade-in">
+        <section id="game" class="glass fade-in">
             <h2>Code Quest</h2>
             <div class="game-area">
                 <div class="level unlocked" data-level="1">
@@ -163,9 +162,9 @@
     </main>
 
     <!-- Footer -->
-    <footer>
-        <p>Contact me at: your.email@example.com | <a href="https://github.com/yourusername"><i class="fab fa-github"></i> GitHub</a></p>
-        <p>I’m a team player who values collaboration and continuous learning—let’s build something great together!</p>
+    <footer class="glass">
+        <p>Contact: <a href="mailto:your.email@example.com">your.email@example.com</a> | <a href="https://github.com/yourusername"><i class="fab fa-github"></i> GitHub</a></p>
+        <p>A collaborative learner ready to innovate together!</p>
     </footer>
 
     <!-- JavaScript for Interactivity -->
@@ -173,7 +172,6 @@
         document.addEventListener('DOMContentLoaded', () => {
             // Fade-In Animation
             const fadeIns = document.querySelectorAll('.fade-in');
-            const options = { threshold: 0.1 };
             const observer = new IntersectionObserver((entries, observer) => {
                 entries.forEach(entry => {
                     if (entry.isIntersecting) {
@@ -181,7 +179,7 @@
                         observer.unobserve(entry.target);
                     }
                 });
-            }, options);
+            }, { threshold: 0.1 });
             fadeIns.forEach(section => observer.observe(section));
 
             // Dashboard Chart
@@ -192,10 +190,14 @@
                     labels: ['Completed', 'In Progress'],
                     datasets: [{
                         data: [10, 2],
-                        backgroundColor: ['#3498db', '#e74c3c']
+                        backgroundColor: ['#00d2ff', '#ff6b6b'],
+                        borderWidth: 0
                     }]
                 },
-                options: { responsive: true }
+                options: {
+                    responsive: true,
+                    plugins: { legend: { position: 'top', labels: { color: '#fff' } } }
+                }
             });
 
             // Category Tabs
@@ -227,7 +229,7 @@
                     }
                 });
             });
-            levels[0].classList.add('unlocked'); // Unlock Level 1 by default
+            levels[0].classList.add('unlocked');
         });
     </script>
 </body>
