--- a/hero-section/index.html
+++ b/hero-section/index.html
@@ -48,70 +48,45 @@
 
     <!-- About Section -->
     <section class="about-section">
-      <div class="about-container">
-        <div class="about-content">
-          <div class="about-image">
-            <img src="https://via.placeholder.com/400x400" alt="Your Photo">
-          </div>
-          <div class="about-text">
-            <h2>About Me</h2>
-            <p>
-              I'm a passionate Cloud Developer focused on building secure, scalable, and user-friendly applications.
-              With a background in full-stack web development and cloud infrastructure, I love turning complex
-              ideas into elegant digital solutions.
-            </p>
-            <ul class="about-features">
-              <li>🚀 AWS Certified Cloud Practitioner</li>
-              <li>💡 Strong focus on security and scalability</li>
-              <li>🛠️ Experienced in Python, JavaScript, HTML/CSS</li>
-              <li>🌐 Portfolio includes web apps, APIs, and infrastructure as code</li>
-            </ul>
-          </div>
+            <div class="about-container">
+              <div class="about-content">
+                <div class="about-image">
+                  <img src="https://via.placeholder.com/400x400" alt="Your Photo">
+                </div>
+                <div class="about-text">
+                  <h2>About Me</h2>
+                  <p>
+                    I'm a passionate Cloud Developer focused on building secure, scalable, and user-friendly applications.
+                    With a background in full-stack web development and cloud infrastructure, I love turning complex
+                    ideas into elegant digital solutions.
+                  </p>
+                  <ul class="about-features">
+                    <li>🚀 AWS Certified Cloud Practitioner</li>
+                    <li>💡 Strong focus on security and scalability</li>
+                    <li>🛠️ Experienced in Python, JavaScript, HTML/CSS</li>
+                    <li>🌐 Portfolio includes web apps, APIs, and infrastructure as code</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </section>
+      
+          <!-- Resume Section -->
+          <div class="resume-job">
+        <button class="collapsible">Cloud Developer – TechCorp (2023–Present)</button>
+        <div class="content">
+          <p>Led the migration of legacy infrastructure to AWS using Terraform and CloudFormation.</p>
+          <p>Implemented CI/CD pipelines with GitHub Actions and AWS CodePipeline.</p>
+          <p>Collaborated with frontend and backend teams to deploy scalable web applications.</p>
         </div>
       </div>
-    </section>
-
-    <!-- Resume Section -->
-    <section class="resume-section">
-      <div class="resume-container">
-        <h2>Resume Overview</h2>
-        <p class="resume-description">
-          Here's a snapshot of my background, experience, and skills.
-        </p>
-
-        <div class="resume-features">
-          <div class="feature-card">
-            <h3>🧠 Skills</h3>
-            <ul>
-              <li>AWS / Cloud Infrastructure</li>
-              <li>Python, JavaScript, HTML/CSS</li>
-              <li>CI/CD & DevOps</li>
-            </ul>
-          </div>
-
-          <div class="feature-card">
-            <h3>💼 Experience</h3>
-            <ul>
-              <li>Cloud Developer – TechCorp (2023–Present)</li>
-              <li>Web Developer – Freelance (2021–2023)</li>
-            </ul>
-          </div>
-
-          <div class="feature-card">
-            <h3>🎓 Education</h3>
-            <ul>
-              <li>AWS Cloud Practitioner – AWS Academy</li>
-              <li>B.S. in Information Technology</li>
-            </ul>
-          </div>
-
-          <div class="feature-card">
-            <h3>📜 Certifications</h3>
-            <ul>
-              <li>AWS Certified Solutions Architect</li>
-              <li>Google IT Support Professional</li>
-            </ul>
-          </div>
+      
+      <div class="resume-job">
+        <button class="collapsible">Web Developer – Freelance (2021–2023)</button>
+        <div class="content">
+          <p>Developed and deployed custom websites and landing pages for small businesses.</p>
+          <p>Specialized in responsive design using HTML, CSS, and JavaScript.</p>
+          <p>Integrated client websites with content management systems and third-party APIs.</p>
         </div>
       </div>
     </section>
